--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -35,9 +35,17 @@ $info: #909399;
 }
 
 figure, .figure {
-  padding: 12px;
+  padding: 6px;
   position: relative;
-  border: 1px solid rgba(0,0,0,0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  box-shadow: 0 0 45px rgba(0,0,0,0.2);
+  box-shadow: 0 0 45px rgba(0, 0, 0, 0.2);
+  box-sizing: border-box;
+}
+
+.echarts {
+  width: inherit !important;
+  height: inherit !important;
+  min-width: 100px;
+  min-height: 100px;
 }
